home page Quotes added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                     <li><a href="index.html" class="ajax">Home</a></li>
                                     <li><a href="about.html" class="ajax">About</a></li>
                                     <li><a href="portfolio.html" class="ajax">Portfolio</a></li>
-                                    <li><a href="contacts.html" class="ajax">Contacts</a></li>
+                                    <li><a href="contacts.html"  class="ajax">Contacts</a></li>
                                 </ul>
                             </nav>
                             <!-- nav end-->
@@ -96,7 +96,7 @@
                 <div class="nav-overlay"></div>
                 <!-- navigation menu end  -->
                 <!-- content-->
-                <div class="content full-height" data-pagetitle="Home slider">
+                <div class="content full-height" data-pagetitle="Hiren Panchani">
                     <div class="fl-wrap full-height hero-conatiner">
                         <div class="hero-wrapper fl-wrap full-height hidden-item">
                             <span class="hc_dec"></span>
@@ -109,44 +109,32 @@
                                             <!-- swiper-slide-->
                                             <div class="swiper-slide">
                                                 <div class="half-hero-wrap">
-                                                    <div class="hhw_header">Welcome to my Website</div>
-                                                    <h1>Sandy Plegas  - <br><span> Web  developer</span> and designer<br>   form <span>USA</span></h1>
-                                                    <h4>Praesent eu massa vel diam laoreet elementum ac sed felis. Donec suscipit ultricies risus sed mollis. Donec volutpat porta risus posuere imperdiet. </h4>
+                                                    <h1>Hiren Panchani  - <br><span> Devops and Network</span> Engineer<br> from <span>INDIA</span></h1>
                                                     <div class="clearfix"></div>
-                                                    <a href="portfolio.html" class="btn ajax  fl-btn color-bg"><span>My portfolio</span></a>
                                                 </div>
                                             </div>
                                             <!-- swiper-slide end-->
                                             <!-- swiper-slide-->
                                             <div class="swiper-slide">
                                                 <div class="half-hero-wrap">
-                                                    <div class="hhw_header">12 december 2020</div>
-                                                    <h1>Old  and  Modern  <br> cars  on the   <span>Newyork</span>  <br> streets</h1>
-                                                    <h4>Praesent eu massa vel diam laoreet elementum ac sed felis. Donec suscipit ultricies risus sed mollis. Donec volutpat porta risus posuere imperdiet. </h4>
+                                                    <h1>The <span>quieter</span> you become,<br> the more<br> you are able to hear</h1>
                                                     <div class="clearfix"></div>
-                                                    <a href="portfolio-single.html" class="btn ajax  fl-btn color-bg"><span>View project</span></a>
                                                 </div>
                                             </div>
                                             <!-- swiper-slide end-->
                                             <!-- swiper-slide-->
                                             <div class="swiper-slide">
                                                 <div class="half-hero-wrap">
-                                                    <div class="hhw_header">25 may 2019</div>
-                                                    <h1>Design  and  <br>development <br>   of <span>  Corporate website</span> </h1>
-                                                    <h4>Praesent eu massa vel diam laoreet elementum ac sed felis. Donec suscipit ultricies risus sed mollis. Donec volutpat porta risus posuere imperdiet. </h4>
+                                                    <h1><span>quality code</span><br> matters more<br> than commercials</h1>
                                                     <div class="clearfix"></div>
-                                                    <a href="portfolio.html" class="btn  ajax  fl-btn color-bg"><span>View project</span></a>
                                                 </div>
                                             </div>
                                             <!-- swiper-slide end-->
                                             <!-- swiper-slide-->
                                             <div class="swiper-slide">
                                                 <div class="half-hero-wrap">
-                                                    <div class="hhw_header">12 april 2020</div>
-                                                    <h1>Original Design <br> Features <br>With High  <span> Quality  Code.</span></h1>
-                                                    <h4>Praesent eu massa vel diam laoreet elementum ac sed felis. Donec suscipit ultricies risus sed mollis. Donec volutpat porta risus posuere imperdiet. </h4>
+                                                    <h1>I am not special,<br> just a <span>Limited Edition</span></h1>
                                                     <div class="clearfix"></div>
-                                                    <a href="about.html" class="btn ajax  fl-btn color-bg"><span>About me</span></a>
                                                 </div>
                                             </div>
                                             <!-- swiper-slide end-->
@@ -205,16 +193,11 @@
                                 <div class="current">01</div>
                                 <div class="total"></div>
                             </div>
-                            <div class="hero-slider_control-wrap">
-                                <div class="hsc hsc-prev"><span><i class="fal fa-angle-left"></i></span> </div>
-                                <div class="hsc hsc-next"><span><i class="fal fa-angle-right"></i></span></div>
-                            </div>
                             <!-- slider-controls end-->
                             <a href="about.html" class="ajax start-btn"><span> Start explore <i class="fal fa-long-arrow-right"></i></span></a>
-                            <div class="play-pause_slider hsc_pp auto_actslider"><i class="fas fa-play"></i></div>
                         </div>
                         <!-- hero-container end-->
-                        <div class="hero-decor-numb"><span>40.7143528  </span><span>-74.0059731 </span> <a href="https://www.google.com.ua/maps/" target="_blank" class="hero-decor-numb-tooltip">Based In NewYork</a></div>
+                        <div class="hero-decor-numb"><span>Hiren Panchani</span></div>
                         <div class="hero-slider-wrap_pagination"></div>
                         <div class="hero-scroll-down-notifer">
                             <div class="scroll-down-wrap ">
