contacts animation fixed

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <link type="text/css" rel="stylesheet" href="css/color.css">
         <!--=============== favicons ===============-->
         <link rel="shortcut icon" href="images/favicon.ico">
+        <script   src="js/jquery.min.js"></script>
+      <script   src="js/contacts.js"></script>
     </head>
     <body>
         <!-- loader   -->
@@ -226,7 +228,7 @@
         </div>
         <!-- Main end -->
         <!--=============== scripts  ===============-->
-        <script   src="js/jquery.min.js"></script>
+        <!-- <script   src="js/jquery.min.js"></script> -->
         <script   src="js/plugins.js"></script>
         <script   src="js/scripts.js"></script>
     </body>
