--- a/about.html
+++ b/about.html
@@ -15,6 +15,9 @@
         <link type="text/css" rel="stylesheet" href="css/color.css">
         <!--=============== favicons ===============-->
         <link rel="shortcut icon" href="images/favicon.ico">
+        <!--=============== JS ===============-->
+        <script   src="js/jquery.min.js"></script>
+      <script   src="js/contacts.js"></script>
     </head>
     <body>
         <!-- loader   -->
