--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                             <!-- swiper-slide-->
                                             <div class="swiper-slide">
                                                 <div class="half-hero-wrap">
-                                                    <h1>I am not special,<br> just a <span>Limited Edition</span></h1>
+                                                    <h1>I am not special,<br> just following the <br><span>Dev Branch</span></h1>
                                                     <div class="clearfix"></div>
                                                 </div>
                                             </div>
