index page slider paly push button added

--- a/index.html
+++ b/index.html
@@ -195,8 +195,13 @@
                                 <div class="current">01</div>
                                 <div class="total"></div>
                             </div>
+                            <div class="hero-slider_control-wrap">
+                                <div class="hsc hsc-prev"><span><i class="fal fa-angle-left"></i></span> </div>
+                                <div class="hsc hsc-next"><span><i class="fal fa-angle-right"></i></span></div>
+                            </div>
                             <!-- slider-controls end-->
                             <a href="about.html" class="ajax start-btn"><span> Start explore <i class="fal fa-long-arrow-right"></i></span></a>
+                            <div class="play-pause_slider hsc_pp auto_actslider"><i class="fas fa-play"></i></div>
                         </div>
                         <!-- hero-container end-->
                         <div class="hero-decor-numb"><span>Hiren Panchani</span></div>
