UI design customize ,logo and user pic added

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <!-- header--> 
             <header class="main-header">
                 <!-- logo  -->
-                <a href="index.html" class="ajax logo-holder"><img src="images/logo.png" alt=""></a>
+                <a href="index.html" class="ajax logo-holder"><img src="images/hp_logo.png" alt=""></a>
                 <!-- logo end -->
                 <!-- nav-button-wrap-->
                 <div class="nav-button but-hol">
@@ -48,7 +48,7 @@
                         <li><span>01. Call </span> <a href="tel:+917359737457">+91 7359735457</a></li>
                         <li><span>02. Write </span> <a href="mailto:hkpanchani7@gmail.com">hkpanchani7@gmail.com</a></li>
                     </ul>
-                    <a href="contacts.html" class="ajax contacts-btn">Get in touch</a>
+                    <a class="ajax contacts-btn ntitle">Hiren Panchani</a>
                 </div>
                 <!-- header-contacts end--> 
             </header>
@@ -67,7 +67,7 @@
             </aside>
             <!-- left-header end--> 
             <!-- share button--> 
-            <div class="share-btn showshare color-bg"><span>Share <i class="fal fa-plus"></i></span></div>
+<!--            <div class="share-btn showshare color-bg"><span>Share <i class="fal fa-plus"></i></span></div>-->
             <!-- share button end--> 
             <!-- right header--> 
             <div class="hc_dec_color">
@@ -112,19 +112,19 @@
                             <div class="psn_button act-filter"><i class="fal fa-sort"></i> FIlter </div>
                         </nav>
                     </div>
-                    <!-- hero-section-dec-->                  
-                    <div class="hero-section-dec color-bg">
-                        <div class="progress-indicator">
-                            <svg xmlns="http://www.w3.org/2000/svg"
-                                viewBox="-1 -1 34 34">
-                                <circle cx="16" cy="16" r="15.9155"
-                                    class="progress-bar__background" />
-                                <circle cx="16" cy="16" r="15.9155"
-                                    class="progress-bar__progress 
-                                    js-progress-bar" />
-                            </svg>
-                        </div>
-                    </div>
+                    <!-- hero-section-dec-->
+<!--                    <div class="hero-section-dec color-bg">-->
+<!--                        <div class="progress-indicator">-->
+<!--                            <svg xmlns="http://www.w3.org/2000/svg"-->
+<!--                                viewBox="-1 -1 34 34">-->
+<!--                                <circle cx="16" cy="16" r="15.9155"-->
+<!--                                    class="progress-bar__background" />-->
+<!--                                <circle cx="16" cy="16" r="15.9155"-->
+<!--                                    class="progress-bar__progress -->
+<!--                                    js-progress-bar" />-->
+<!--                            </svg>-->
+<!--                        </div>-->
+<!--                    </div>-->
                     <!-- hero-section-dec end--> 
                     <!--fixed-column-wrap-->
                     <div class="fixed-column-wrap">
@@ -197,8 +197,7 @@
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="dec-img   fl-wrap">
-                                                <img src="images/about.jpg" class="respimg" alt="">
-                                                <a class="video_link image-popup" href="https://vimeo.com/34741214"><i class="fas fa-play"></i><span>Play Story video</span></a>
+                                                <img src="images/hkpanchani.jpg" class="respimg" alt="">
                                             </div>
                                         </div>
                                         <div class="col-sm-7">
@@ -263,7 +262,7 @@
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar.  </p>
                                     </div>
                                     <!--process-wrap  -->
-                                    <div class="process-wrap fl-wrap resume">
+                                    <div class="process-wrap fl-wrap resume" style="border-radius: 50px">
                                         <div class="row">
 <!--                                            <div class=" col-sm-12">-->
 <!--                                                <div class="process-details">-->
@@ -447,10 +446,10 @@
                                         <h3>Certifications</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar.  </p>
                                     </div>
-                                    <div class="process-wrap fl-wrap">
+                                    <div class="process-wrap fl-wrap" >
                                         <div class="row">
                                             <div class=" col-sm-12">
-                                                <div class="process-details pdli pdli1">
+                                                <div class="process-details pdli pdli1" style="border-radius: 50px">
                                                     <ul class="pdcw_list pdli fl-wrap">
                                                         <li><h4><b>CCNA</b> Cisco Certified Network <b>Associate (R & S - Certified)</b></h4></li><br>
                                                         <li><h4><b>CCNP</b> Cisco Certified Network <b>Professional (R & S - Certified)</b></h4></li><br>
