--- a/contacts.html
+++ b/contacts.html
@@ -32,7 +32,7 @@
          <!-- header--> 
          <header class="main-header">
             <!-- logo  -->
-            <a href="index.html" class="ajax logo-holder"><img src="images/logo.png" alt=""></a>
+            <a href="index.html" class="ajax logo-holder"><img src="images/hp_logo.png" alt=""></a>
             <!-- logo end -->
             <!-- nav-button-wrap-->
             <div class="nav-button but-hol">
@@ -48,7 +48,7 @@
                   <li><span>01. Call </span> <a href="tel:+917359737457">+91 7359735457</a></li>
                   <li><span>02. Write </span> <a href="mailto:hkpanchani7@gmail.com">hkpanchani7@gmail.com</a></li>
                </ul>
-               <a href="contacts.html" class="ajax contacts-btn">Get in touch</a>
+               <a class="ajax contacts-btn ntitle">Hiren Panchani</a>
             </div>
             <!-- header-contacts end--> 
          </header>
@@ -67,7 +67,7 @@
          </aside>
          <!-- left-header end--> 
          <!-- share button--> 
-         <div class="share-btn showshare color-bg"><span>Share <i class="fal fa-plus"></i></span></div>
+<!--         <div class="share-btn showshare color-bg"><span>Share <i class="fal fa-plus"></i></span></div>-->
          <!-- share button end--> 
          <!-- right header--> 
          <div class="hc_dec_color">
@@ -142,6 +142,7 @@
                      </div>
                   </div>
                </div>
+
                <div class="map-container" id="particle-canvas">
                </div>
                <div class="main_social">
