--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- header-->
             <header class="main-header">
                 <!-- logo  -->
-                <a href="index.html" class="ajax logo-holder"><img src="images/logo.png" alt=""></a>
+                <a href="index.html" class="ajax logo-holder"><img src="images/hp_logo.png" alt=""></a>
                 <!-- logo end -->
                 <!-- nav-button-wrap-->
                 <div class="nav-button but-hol">
@@ -47,7 +47,7 @@
                         <li><span>01. Call </span> <a href="tel:+917359737457">+91 7359735457</a></li>
                         <li><span>02. Write </span> <a href="mailto:hkpanchani7@gmail.com">hkpanchani7@gmail.com</a></li>
                     </ul>
-                    <a href="contacts.html" class="ajax contacts-btn">Get in touch</a>
+                    <a class="ajax contacts-btn ntitle">Hiren Panchani</a>
                 </div>
                 <!-- header-contacts end-->
             </header>
@@ -66,7 +66,7 @@
             </aside>
             <!-- left-header end-->
             <!-- share button-->
-            <div class="share-btn showshare color-bg"><span>Share <i class="fal fa-plus"></i></span></div>
+<!--            <div class="share-btn showshare color-bg"><span>Share <i class="fal fa-plus"></i></span></div>-->
             <!-- share button end-->
             <!-- right header-->
             <div class="hc_dec_color">
@@ -175,19 +175,19 @@
                                         <!-- swiper-slide end-->
                                     </div>
                                 </div>
-                                <div class="hero-corner-dec"></div>
-                                <div class="hero-corner-dec2"></div>
+<!--                                <div class="hero-corner-dec"></div>-->
+<!--                                <div class="hero-corner-dec2"></div>-->
                             </div>
                             <!-- hero-slider-img  end-->
                             <!-- slider-controls -->
-                            <div class="slider-progress-bar">
-                                <span>
-                                    <svg class="circ" width="50" height="50">
-                                        <circle class="circ2" cx="25" cy="25" r="23" stroke="rgba(255,255,255,0.4)" stroke-width="1" fill="none"/>
-                                        <circle class="circ1" cx="25" cy="25" r="23" stroke="#fff" stroke-width="2" fill="none"/>
-                                    </svg>
-                                </span>
-                            </div>
+<!--                            <div class="slider-progress-bar">-->
+<!--                                <span>-->
+<!--                                    <svg class="circ" width="50" height="50">-->
+<!--                                        <circle class="circ2" cx="25" cy="25" r="23" stroke="rgba(255,255,255,0.4)" stroke-width="1" fill="none"/>-->
+<!--                                        <circle class="circ1" cx="25" cy="25" r="23" stroke="#fff" stroke-width="2" fill="none"/>-->
+<!--                                    </svg>-->
+<!--                                </span>-->
+<!--                            </div>-->
                             <div class="clone-counter">
                                 <div class="current">01</div>
                             </div>
@@ -200,7 +200,7 @@
                                 <div class="hsc hsc-next"><span><i class="fal fa-angle-right"></i></span></div>
                             </div>
                             <!-- slider-controls end-->
-                            <a href="about.html" class="ajax start-btn"><span> Start explore <i class="fal fa-long-arrow-right"></i></span></a>
+<!--                            <a href="about.html" class="ajax start-btn"><span> Start explore <i class="fal fa-long-arrow-right"></i></span></a>-->
                             <div class="play-pause_slider hsc_pp auto_actslider"><i class="fas fa-play"></i></div>
                         </div>
                         <!-- hero-container end-->
