images edited for portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -246,7 +246,7 @@
                                     <div class="grid-item-holder hov_zoom">
                                         <div class="grid-post-media fl-wrap">
                                             <a href="portfolio/app/etus_portfolio_app.html" target="_blank" class="ajax"><img
-                                                    src="images/logo/etus_logo.png" style="background: #1a96f2" alt=""></a>
+                                                    src="images/logo/etus-img.png" style="background: #1a96f2" alt=""></a>
                                             <div class="post-det-num">01.</div>
                                         </div>
                                         <div class="post-det fl-wrap">
