--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="header-contacts">
                     <ul>
                         <li><span>01. Call </span> <a href="tel:+917359737457">+91 7359735457</a></li>
-                        <li><span>02. Write </span> <a href="mailto:hkpanchani7@gmail.com">hkpanchani7@gmail.com</a></li>
+                        <li><span>02. Write </span> <a href="mailto:hello@hkpanchani.dev">{your-name}@hkpanchani.dev</a></li>
                     </ul>
                     <a class="ajax contacts-btn ntitle">Hiren Panchani</a>
                 </div>
@@ -111,7 +111,7 @@
                                             <!-- swiper-slide-->
                                             <div class="swiper-slide">
                                                 <div class="half-hero-wrap">
-                                                    <h1>Hiren Panchani  - <br><span> Devops and Network</span> Engineer<br> from <span>INDIA</span></h1>
+                                                    <h1>Hiren Panchani  - <br><span> System Design</span> &<br> <span>DevSecOps</span> Engineer</h1>
                                                     <div class="clearfix"></div>
                                                 </div>
                                             </div>
