--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 <div class="header-contacts">
                     <ul>
                         <li><span>01. Call </span> <a href="tel:+917359737457">+91 7359735457</a></li>
-                        <li><span>02. Write </span> <a href="mailto:hkpanchani7@gmail.com">hkpanchani7@gmail.com</a></li>
+                        <li><span>02. Write </span> <a href="mailto:hello@hkpanchani.dev">{your-name}@hkpanchani.dev</a></li>
                     </ul>
                     <a class="ajax contacts-btn ntitle">Hiren Panchani</a>
                 </div>
@@ -203,7 +203,7 @@
                                         <div class="col-sm-7">
                                             <div class="main-about fl-wrap">
                                                 <h2>Innovative solutions to boost <br><span> your creative </span>  projects</h2>
-                                                <p>Bilingual DevOps Engineer with background designing, testing, and implementing
+                                                <p>Bilingual DevSecOps Engineer with background designing, testing, and implementing
                                                     infrastructure and applications. Talented performer with over 2 years of experience
                                                     using source control tools to identify and fix bugs in code. Consistent team player with
                                                     exemplary multitasking skills</p>
@@ -312,7 +312,7 @@
                                             <div class="col-lg-6 resume-details" data-aos="fade-up" data-aos-delay="100">
                                                 <h3 class="resume-title">Work Summary</h3>
                                                 <div class="resume-item">
-                                                    <h4>DevOps & Network Engineer</h4>
+                                                    <h4>System Design & DevSecOps Engineer</h4>
                                                     <h5>2019-12 - Current</h5>
                                                     <p><em>RK University, Rajkot, Gujarat</em></p>
                                                     <ul>
