--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                 <div class="hsc hsc-next"><span><i class="fal fa-angle-right"></i></span></div>
                             </div>
                             <!-- slider-controls end-->
-<!--                            <a href="about.html" class="ajax start-btn"><span> Start explore <i class="fal fa-long-arrow-right"></i></span></a>-->
+                           <a href="about.html" class="ajax start-btn"><span> Know More <i class="fal fa-long-arrow-right"></i></span></a>
                             <div class="play-pause_slider hsc_pp auto_actslider"><i class="fas fa-play"></i></div>
                         </div>
                         <!-- hero-container end-->
