--- a/portfolio.html
+++ b/portfolio.html
@@ -141,7 +141,7 @@
                     <section class="scroll_sec" id="sec1">
                         <div class="container">
                             <div class="section-title">
-                                <h3>DevOps Portfolio</h3>
+                                <h3>System Designs</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque.
                                     Nulla finibus lobortis pulvinar. </p>
                             </div>
