--- a/about.html
+++ b/about.html
@@ -139,21 +139,21 @@
                                             <!--ms_item-->
                                             <div class="swiper-slide">
                                                 <div class="ms-item_fs fl-wrap">
-                                                    <div class="bg par-elem"  data-bg="images/bg/10.jpg"  ></div>
+                                                    <div class="bg par-elem"  data-bg="images/bg/about/1.jpg"  ></div>
                                                 </div>
                                             </div>
                                             <!--ms_item end-->
                                             <!--ms_item-->
                                             <div class="swiper-slide ">
                                                 <div class="ms-item_fs fl-wrap">
-                                                    <div class="bg par-elem"  data-bg="images/bg/8.jpg"></div>
+                                                    <div class="bg par-elem"  data-bg="images/bg/about/2.jpg"></div>
                                                 </div>
                                             </div>
                                             <!--ms_item end-->
                                             <!--ms_item-->
                                             <div class="swiper-slide">
                                                 <div class="ms-item_fs fl-wrap">
-                                                    <div class="bg par-elem"  data-bg="images/bg/13.jpg"></div>
+                                                    <div class="bg par-elem"  data-bg="images/bg/about/3.jpg"></div>
                                                 </div>
                                             </div>
                                             <!--ms_item end-->
@@ -168,8 +168,8 @@
                             </div>
                             <!--fixed-column-wrap_title-->
                             <div class="fixed-column-wrap_title first-tile_load">
-                                <h2>About My<br> Studio</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar.</p>
+                                <h2>This is<br> me!</h2>
+                                <p>“DevOps is not a goal, but a never-ending process of continual improvement”</p>
                             </div>
                             <!--fixed-column-wrap_title end-->
                             <div class="fixed-column-dec"></div>
@@ -192,7 +192,7 @@
                                 <div class="container">
                                     <div class="section-title">
                                         <h3>Some   Words About Me  </h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar.  </p>
+                                        <p>I like to give command to VM, and enjoy bringing ideas to life in the terminal.</p>
                                     </div>
                                     <div class="row">
                                         <div class="col-sm-5">
@@ -213,10 +213,10 @@
                                                         <div class="inline-facts">
                                                             <div class="milestone-counter">
                                                                 <div class="stats animaper">
-                                                                    <div class="num" data-content="0" data-num="145">0</div>
+                                                                    <div class="num" data-content="0" data-num="507">0</div>
                                                                 </div>
                                                             </div>
-                                                            <h6>Finished projects</h6>
+                                                            <h6>Contributions</h6>
                                                         </div>
                                                     </div>
                                                     <!-- inline-facts end -->
@@ -225,10 +225,10 @@
                                                         <div class="inline-facts">
                                                             <div class="milestone-counter">
                                                                 <div class="stats animaper">
-                                                                    <div class="num" data-content="0" data-num="825">0</div>
+                                                                    <div class="num" data-content="0" data-num="4096">0</div>
                                                                 </div>
                                                             </div>
-                                                            <h6>Working hours</h6>
+                                                            <h6>Working Hours</h6>
                                                         </div>
                                                     </div>
                                                     <!-- inline-facts end -->
@@ -259,7 +259,7 @@
                                 <div class="container">
                                     <div class="section-title">
                                         <h3>Resume</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar.  </p>
+                                        <p>Skills can be taught, personality is inherent. I prefer to keep learning, continue challenging myself, and do interesting things that matter.</p>
                                     </div>
                                     <!--process-wrap  -->
                                     <div class="process-wrap fl-wrap resume" style="border-radius: 50px">
@@ -352,7 +352,7 @@
                                 <div class="container">
                                     <div class="section-title">
                                         <h3>Developer  and  Language  Skills</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar.  </p>
+                                        <p>Skills can be taught, personality is inherent. I prefer to keep learning, continue challenging myself, and do interesting things that matter.</p>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-9">
@@ -444,7 +444,7 @@
                                 <div class="container">
                                     <div class="section-title">
                                         <h3>Certifications</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar.  </p>
+                                        <p>I don’t like to define myself by the certifications I’ve done. I define myself by the work I want to do.</p>
                                     </div>
                                     <div class="process-wrap fl-wrap" >
                                         <div class="row">
@@ -471,8 +471,8 @@
                             <section class="scroll_sec" id="sec5">
                                 <div class="container">
                                     <div class="section-title">
-                                        <h3>Clents And Testimonilas</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar.  </p>
+                                        <h3>Recommendations</h3>
+                                        <p>Wise words by the people I adore or I've worked with and I'm proud of this.  </p>
                                     </div>
                                     <div class="testimonilas-carousel-wrap fl-wrap">
                                         <div class="tc-button tc-button-next"><i class="fal fa-angle-right"></i></div>
