--- a/portfolio.html
+++ b/portfolio.html
@@ -142,8 +142,7 @@
                         <div class="container">
                             <div class="section-title">
                                 <h3>System Designs</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque.
-                                    Nulla finibus lobortis pulvinar. </p>
+                                <p>Designing system isn’t a project. It’s a product serving products. </p>
                             </div>
                             <!-- portfolio start -->
                             <div class="gallery-items big-pad  two-column  fl-wrap  ">
@@ -235,9 +234,8 @@
                     <section class="scroll_sec" id="sec2">
                         <div class="container">
                             <div class="section-title">
-                                <h3>Android Portfolio</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque.
-                                    Nulla finibus lobortis pulvinar. </p>
+                                <h3>Android Applications</h3>
+                                <p>The interesting thing about Android's design is how little we modified the kernel. </p>
                             </div>
                             <!-- portfolio start -->
                             <div class="gallery-items big-pad  two-column  fl-wrap  ">
@@ -320,9 +318,8 @@
                     <section class="scroll_sec" id="sec3">
                         <div class="container">
                             <div class="section-title">
-                                <h3>Web Application Portfolio</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque.
-                                    Nulla finibus lobortis pulvinar. </p>
+                                <h3>Web Applications</h3>
+                                <p>Great websites without functionality is like a sports car with no engine. </p>
                             </div>
                             <!-- portfolio start -->
                             <div class="gallery-items big-pad  two-column  fl-wrap  ">
@@ -429,9 +426,8 @@
                     <section class="scroll_sec" id="sec4">
                         <div class="container">
                             <div class="section-title">
-                                <h3>Desktop Application Portfolio</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque.
-                                    Nulla finibus lobortis pulvinar. </p>
+                                <h3>Desktop Applications</h3>
+                                <p>Software is a great combination between artistry and engineering and it is the language of Automation and I am obsessed about Automation. </p>
                             </div>
                             <!-- portfolio start -->
                             <div class="gallery-items big-pad  two-column  fl-wrap  ">
